# open-learning

./: .env.example  .gitignore  CHANGELOG.md  PROJECT_SPECS.md  README.md  deep-research-agent-design.md  langgraph.json  openlearning.yaml  plugins.yaml  pyproject.toml  skills.yaml  tools.yaml
.claude/: settings.json
.claude/commands/: phase-checkpoint.md
.claude/skills/: phase-checkpoint.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
docs/: three-layer-memory.md
plugins/: douban_movies.py  example_rss.py
src/openlearning/: __init__.py  cli.py  config.py  database.py  exporters.py  llm.py  log.py  models.py  scheduler.py
src/openlearning/agents/: __init__.py  analyzer.py  builder.py  collector.py  evaluator.py  graph.py  memory.py  planner.py  prompts.py  reflector.py  state.py  supervisor.py  tool_router.py  tools.py  updater.py
src/openlearning/context/: __init__.py  manager.py
src/openlearning/memory/: __init__.py  gaps.py  mastery.py  preferences.py  spaced.py  tracker.py
src/openlearning/monitoring/: __init__.py  cost.py  tracer.py
src/openlearning/plugins/: __init__.py  base.py  manager.py
src/openlearning/skills/: analyze.py  fetch.py  memory.py  persist.py  render.py  (+1 more)
tests/: conftest.py  test_analyzer.py  test_builder.py  test_collector.py  test_evaluator.py  test_exporters.py  test_memory.py  test_planner.py  test_plugins.py  test_project_mgmt.py  test_reflector.py  test_render.py  test_search_cn.py  test_search_incremental.py  test_updater.py  test_web.py
(+16 files in other folders)
