[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openlearning"
version = "0.1.0"
description = "AI-driven personal learning information system"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # CLI
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    # LLM & Agent
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    # Database
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    # HTTP & Scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.12.0",
    # Template
    "jinja2>=3.1.0",
    # Config
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # Observability
    "langsmith>=0.1.0",
    # Token counting
    "tiktoken>=0.7.0",
    # Scheduler
    "apscheduler>=3.10.0",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "playwright>=1.40.0",
]

[project.scripts]
openlearning = "openlearning.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openlearning"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
